Fixed #141 not reponsive on mobile

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -22,6 +22,18 @@ h1 {
   font-weight: normal;
 }
 
+a.pr {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: 'center';
+      -ms-flex-pack: 'center';
+          justify-content: 'center';
+  -webkit-box-align: 'center';
+      -ms-flex-align: 'center';
+          align-items: 'center';
+}
+
 .pr {
   min-height: 64px;
 }
